# file-hunter-agent

./: .gitignore  README.md  config.example.json  filehunter-agent  pyproject.toml  requirements.txt
file_hunter_agent/: __main__.py  app.py  auth.py  client.py  config.py  response.py
file_hunter_agent/routes/: browse.py  disk_stats.py  files.py  folders.py  listdir.py  locations.py  reconcile.py  scan.py  status.py  tree.py  upload.py
file_hunter_agent/services/: cache.py  scanner.py
file_hunter_core/: __init__.py  browse.py  classify.py  fileops.py  hasher.py  reconcile.py  tree.py  walker.py
